--- a/views/booking_planning_select.erb
+++ b/views/booking_planning_select.erb
@@ -1,22 +1,41 @@
 <div id="reservation_selector" class="container">
   <div class="grid_12">
   	<% if @bookings.size == 1 %>
-  	  <h3>Reserva seleccionada</h3>
-      <div class="guiblock">
-        <div><strong style="width: 80px; display:inline-block">Localizador:</strong> <%=@bookings.first.id%></div>
-        <div><strong style="width: 80px; display:inline-block">Cliente:</strong> <%=@bookings.first.customer_name%> <%=@bookings.first.customer_surname%></div>
-        <div><strong style="width: 80px; display:inline-block">Fecha inicio:</strong> <%=@bookings.first.date_from.strftime('%d-%m-%Y')%> <%=@bookings.first.time_from%></div>
-        <div><strong style="width: 80px; display:inline-block">Fecha fin:</strong> <%=@bookings.first.date_to.strftime('%d-%m-%Y')%> <%=@bookings.first.time_from%></div>
-        <div><strong style="width: 80px; display:inline-block">Recurso:</strong> <%=@bookings.first.booking_item_reference%></div>
+      <div id="reservation_selected">
+  	    <h3 class="bottom-border-solid">1. Seleccionar reserva</h3>
+        <div class="guiblock">
+          <div><strong style="width: 80px; display:inline-block">Localizador:</strong> <%=@bookings.first.id%></div>
+          <div><strong style="width: 80px; display:inline-block">Cliente:</strong> <%=@bookings.first.customer_name%> <%=@bookings.first.customer_surname%></div>
+          <div><strong style="width: 80px; display:inline-block">Fecha inicio:</strong> <%=@bookings.first.date_from.strftime('%d-%m-%Y')%> <%=@bookings.first.time_from%></div>
+          <div><strong style="width: 80px; display:inline-block">Fecha fin:</strong> <%=@bookings.first.date_to.strftime('%d-%m-%Y')%> <%=@bookings.first.time_from%></div>
+          <div><strong style="width: 80px; display:inline-block">Recurso:</strong> <%=@bookings.first.booking_item_reference%></div>
+        </div>
       </div>
-      <div class="highlight_block smaller_text">
-        <p>Por favor seleccione el recurso que desea reasignar la reserva</p>
-      </div>
-      <form name="reassign_form">
-      	<input type="hidden" name="id" value="<%=@bookings.first.id2%>"/>
-      </form>
     <% else %>
-      <h3>Seleccionar la reserva</h3>
+      <h3>1. Seleccionar la reserva</h3>
     <% end %>
+    <div id="select_resource">
+      <h3 class="bottom-border-solid">2. Seleccionar recurso</h3>
+      <div id="select_resource_help" class="highlight_block smaller_text" style="display:none">
+        <p>Pulse sobre cualquier celda de la fila del recurso al que desea reasignar la reserva</p>
+      </div>
+      <div class="top-margin bottom-margin">
+        <button id="select_resource_button" class="form-button green-button" style="margin: 0 auto; display: block; width: 100%">Iniciar selección recurso</button>
+
+    <div id="reassign_resource" style="display:none">
+      <div class="guiblock">
+        <div><strong style="width: 80px; display:inline-block">Recurso:</strong> <span id="resource"></span></div>
+      </div>
+      <form name="reassign_form" class="bottom-margin">
+        <input type="hidden" name="id" value="<%=@bookings.first.id2%>"/>
+        <input type="hidden" name="resource"/>
+        <button type="submit" class="form-button green-button centered_text" style="margin: 0 auto; display: block; width: 100%">Reasignar recurso</button>
+      </form>
+    </div>    
+
+
+        <button id="cancel_select_resource_button" class="form-button red-button" style="margin: 0 auto; display: none; width: 100%">Cancelar selección recurso</button>
+      </div>
+    </div>
   </div>
 </div>
