--- a/views/booking_planning_select.erb
+++ b/views/booking_planning_select.erb
@@ -2,39 +2,95 @@
   <div class="grid_12">
   	<% if @bookings.size == 1 %>
       <div id="reservation_selected">
-  	    <h3 class="bottom-border-solid">1. Seleccionar reserva</h3>
+  	    <h3 class="bottom-border-solid">1. Reserva</h3>
         <div class="guiblock">
-          <div><strong style="width: 80px; display:inline-block">Localizador:</strong> <%=@bookings.first.id%></div>
+          <div><strong style="width: 80px; display:inline-block">Localizador:</strong> <%if @bookings.first.origin == 'booking'%>R <a href="/admin/booking/bookings/<%=@bookings.first.id%>"><%=@bookings.first.id%></a><%else%>PR <%=@bookings.first.id%><%end%></div>
           <div><strong style="width: 80px; display:inline-block">Cliente:</strong> <%=@bookings.first.customer_name%> <%=@bookings.first.customer_surname%></div>
-          <div><strong style="width: 80px; display:inline-block">Fecha inicio:</strong> <%=@bookings.first.date_from.strftime('%d-%m-%Y')%> <%=@bookings.first.time_from%></div>
-          <div><strong style="width: 80px; display:inline-block">Fecha fin:</strong> <%=@bookings.first.date_to.strftime('%d-%m-%Y')%> <%=@bookings.first.time_from%></div>
-          <div><strong style="width: 80px; display:inline-block">Recurso:</strong> <%=@bookings.first.booking_item_reference%></div>
+          <div><strong style="width: 80px; display:inline-block">Fecha inicio:</strong> <b><%=@bookings.first.date_from.strftime('%d-%m-%Y')%> <%if @product_family.time_to_from%><%=@bookings.first.time_from%><%end%></b></div>
+          <div><strong style="width: 80px; display:inline-block">Fecha fin:</strong> <b><%=@bookings.first.date_to.strftime('%d-%m-%Y')%> <%if @product_family.time_to_from%><%=@bookings.first.time_to%><%end%></b></div>
+          <div><strong style="width: 80px; display:inline-block">Recurso:</strong> <%=@bookings.first.booking_item_category%> - <b><%=@bookings.first.booking_item_reference%></b></div>
+          <% if @bookings.first.origin == 'booking' %>
+            <% if @product_family.named_resources %>
+              <hr style="margin: 0.2em 0;"/>
+              <div><strong style="width: 80px; display:inline-block">U1:</strong> <%=@bookings.first.resource_1_name%></div>
+              <div><strong style="width: 80px; display:inline-block">Altura U1:</strong> <%=@bookings.first.customer_height%> <strong>Peso U1:</strong> <%= @bookings.first.customer_weight%></div>    
+              <% if @bookings.first.pax == 2 %>
+                <div><strong style="width: 80px; display:inline-block">U2:</strong> <%=@bookings.first.resource_2_name%></div>
+                <div><strong style="width: 80px; display:inline-block">Altura U2:</strong> <%=@bookings.first.customer_2_height%> <strong>Peso U2:</strong> <%= @bookings.first.customer_2_weight%></div>            
+              <% end %>   
+              <hr style="margin: 0.2em 0;"/>
+            <% end %>                    
+          <% end %>
+          <div><strong style="width: 80px; display:inline-block">Color:</strong></div>
+          <form name="color">
+            <input type="hidden" name="id" value="<%=@bookings.first.id%>"/>
+            <input type="hidden" name="type" value="<%=@bookings.first.origin%>"/>
+            <input type="color" name="planning_color" class="color" value="<%=@bookings.first.planning_color%>" style="width:97%; top-margin: 10px"/>
+          </form>
+          <% if @bookings.first.origin == 'prereservation' %>
+            <button type="button" class="destroy_prereservation_button form-button red-button" style="margin: 5px auto; width: 100%" rel="<%=@bookings.first.id%>">Eliminar prereserva</button>   
+          <% end %>
         </div>
       </div>
     <% else %>
       <h3>1. Seleccionar la reserva</h3>
+      <form name="select_booking">
+      <% @bookings.each do |booking| %>
+        <div class="guiblock bottom-margin">
+          <div><input type="radio" name="id" value="<%=booking.id2%>" rel="<%=booking.origin%>"></input><strong style="width: 80px; display:inline-block">Localizador:</strong> <%if booking.origin == 'booking'%>R <a href="/admin/booking/bookings/<%=booking.id%>"><%=booking.id%></a><%else%>PR <%=booking.id%><%end%></div>
+          <div><strong style="width: 80px; display:inline-block">Cliente:</strong> <%=booking.customer_name%> <%=booking.customer_surname%></div>
+          <div><strong style="width: 80px; display:inline-block">Fecha inicio:</strong> <b><%=booking.date_from.strftime('%d-%m-%Y')%> <%if @product_family.time_to_from%><%=booking.time_from%><%end%></b></div>
+          <div><strong style="width: 80px; display:inline-block">Fecha fin:</strong> <b><%=booking.date_to.strftime('%d-%m-%Y')%> <%if @product_family.time_to_from%><%=booking.time_to%><%end%></b></div>
+          <div><strong style="width: 80px; display:inline-block">Recurso:</strong> <%=booking.booking_item_category%> - <b><%=booking.booking_item_reference%></b></div>      
+          <% if booking.origin = 'booking' %>
+            <% if @product_family.named_resources %>
+              <hr style="margin: 0.2em 0;"/>
+              <div><strong style="width: 80px; display:inline-block">U1:</strong> <%=booking.resource_1_name%></div>
+              <div><strong style="width: 80px; display:inline-block">Altura U1:</strong> <%=booking.customer_height%> <strong>Peso U1:</strong> <%= booking.customer_weight%></div>    
+              <% if booking.pax == 2 %>
+                <div><strong style="width: 80px; display:inline-block">U2:</strong> <%=booking.resource_2_name%></div>
+                <div><strong style="width: 80px; display:inline-block">Altura U2:</strong> <%=booking.customer_2_height%> <strong>Peso U2:</strong> <%= booking.customer_2_weight%></div>            
+              <% end %>   
+              <hr style="margin: 0.2em 0;"/>
+            <% end %>  
+          <% end %>
+          <% if booking.origin == 'prereservation' %>
+            <button type="button" class="destroy_prereservation_button form-button red-button" style="margin: 5px auto; width: 100%" rel="<%=booking.id%>">Eliminar prereserva</button>
+          <% end %>          
+        </div>      
+      <% end %>
+      </form>
+      <% @bookings.each do |booking| %>
+          <h4>Colores</h4>
+          <div><strong style="width: 80px; display:inline-block">Localizador:</strong> <%if booking.origin == 'booking'%>R <%=booking.id%><%else%>PR <%=booking.id%><%end%></div>
+          <form name="color">
+            <input type="hidden" name="id" value="<%=booking.id%>"/>
+            <input type="hidden" name="type" value="<%=booking.origin%>"/>
+            <input type="color" name="planning_color" class="color" value="<%=booking.planning_color%>" style="width:97%; top-margin: 10px"/>
+          </form>         
+      <% end %>
     <% end %>
+    
     <div id="select_resource">
-      <h3 class="bottom-border-solid">2. Seleccionar recurso</h3>
+      <h3 class="bottom-border-solid">2. Reasignar recurso</h3>
       <div id="select_resource_help" class="highlight_block smaller_text" style="display:none">
         <p>Pulse sobre cualquier celda de la fila del recurso al que desea reasignar la reserva</p>
       </div>
       <div class="top-margin bottom-margin">
-        <button id="select_resource_button" class="form-button green-button" style="margin: 0 auto; display: block; width: 100%">Iniciar selección recurso</button>
-
-    <div id="reassign_resource" style="display:none">
-      <div class="guiblock">
-        <div><strong style="width: 80px; display:inline-block">Recurso:</strong> <span id="resource"></span></div>
-      </div>
-      <form name="reassign_form" class="bottom-margin">
-        <input type="hidden" name="id" value="<%=@bookings.first.id2%>"/>
-        <input type="hidden" name="resource"/>
-        <button type="submit" class="form-button green-button centered_text" style="margin: 0 auto; display: block; width: 100%">Reasignar recurso</button>
-      </form>
-    </div>    
-
-
-        <button id="cancel_select_resource_button" class="form-button red-button" style="margin: 0 auto; display: none; width: 100%">Cancelar selección recurso</button>
+        <button type="button" id="select_resource_button" class="form-button green-button" style="margin: 0 auto; display: block; width: 100%">Selección nuevo recurso</button>
+        <div id="reassign_resource" style="display:none">
+          <div class="guiblock">
+            <div><strong style="width: 120px; display:inline-block">Recurso actual:</strong> <span id="original_resource"></span></div>
+            <div><strong style="width: 120px; display:inline-block">Recurso nuevo:</strong> <span id="resource"></span></div>
+          </div>
+          <form name="reassign_form" class="bottom-margin">
+            <input type="hidden" name="id" value="<%=@bookings.first.id2%>"/>
+            <input type="hidden" name="origin" value="<%=@bookings.first.origin%>">
+            <input type="hidden" name="resource"/>
+            <button id="reassign_button" type="button" class="form-button green-button centered_text" style="margin: 0 auto; display: block; width: 100%">Reasignar recurso</button>
+          </form>
+        </div>    
+        <button type="button" id="cancel_select_resource_button" class="top-margin form-button red-button" style="margin: 0 auto; display: none; width: 100%">Cancelar selección recurso</button>
       </div>
     </div>
   </div>
