activity payment button

--- a/views/reservation_activities_checkout.erb
+++ b/views/reservation_activities_checkout.erb
@@ -45,8 +45,8 @@
               <div class="formrow centered_text">
 	        	  <div style="display:inline-block">
 	      	        <button type="submit" name="pay_now" value="true" id="button_ir_a_pagar_reserva" class="form-button botones">
-                      <span><%=t.new_booking.go_to_pay_line1%></span><br/>
-                      <span><%=t.new_booking.go_to_pay_line2%></span><br/>
+                      <span><%=t.new_reservation_activity.go_to_pay_line1%></span><br/>
+                      <span><%=t.new_reservation_activity.go_to_pay_line2%></span><br/>
 	      	        </button>
 	              </div>
 	        	  <div style="display:inline-block">	            
